# platform.core.multimedia.dcm-service

./: AUTHORS  CMakeLists.txt  dcm-service.pc.in
include/: DcmColorUtils.h  DcmDbUtils.h  DcmDebugUtils.h  DcmFaceUtils.h  DcmIpcUtils.h  DcmMainSvc.h  DcmScanSvc.h  DcmTypes.h
libdcm-face/: dcm-face-debug.h  dcm-face.c  dcm-face_mediavision.c  dcm-face_priv.h
libdcm-face/include/: dcm-face.h  dcm-face_type.h
libdcm-util/: dcm_image_codec.cpp
libdcm-util/include/: dcm_image_codec.h  dcm_image_debug_utils.h
packaging/: dcm-service.spec
src/: DcmColorUtils.cpp  DcmDbUtils.cpp  DcmFaceUtils.cpp  DcmIpcUtils.cpp  DcmScanSvc.cpp
svc/: CMakeLists.txt  DcmMainSvc.cpp
test/: CMakeLists.txt  dcm-test.c
